--- a/client/client/package.json
+++ b/client/client/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "date-fns": "^2.29.3",
+    "dateformat": "^5.0.3",
     "dayz": "^2.9.1",
     "install": "^0.13.0",
     "mdb-react-ui-kit": "^4.2.0",
