--- a/client/client/package.json
+++ b/client/client/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/interaction": "^5.11.3",
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
+    "@meronex/icons": "^4.0.0",
     "@mui/material": "^5.10.12",
     "@popperjs/core": "^2.11.6",
     "@react-icons/all-files": "^4.1.0",
@@ -31,6 +32,7 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.0",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-icons": "^1.9.1",
     "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-calendar": "^3.9.0",
     "react-dom": "^18.2.0",
