--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
-    "start": "node server.js",
-    "proxy": "https://localhost:3000"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
