--- a/apps/client/client/package.json
+++ b/apps/client/client/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
+    "react-toastify": "^9.1.1",
     "reactjs-popup": "^2.0.5"
   },
   "devDependencies": {
